--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
     "autoprefixer": "^8.6.5",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "bootstrap": "^4.1.2",
+    "bootstrap": "^4.3.1",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.11",
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
+    "fstream": "^1.0.12",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-pug-plugin": "^0.3.0",
     "imagemin-webpack-plugin": "^2.2.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.4.3",
     "node-sass": "^4.9.3",
     "popper.js": "^1.14.4",
@@ -44,9 +46,10 @@
     "sass": "^1.13.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
+    "tar": "^4.4.8",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8",
+    "webpack-dev-server": "^3.1.11",
     "webpack-livereload-plugin": "^2.1.1"
   }
 }
