--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "tar": "^4.4.8",
+    "tunnel-agent": "^0.6.0",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.11",
